--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-delay-render": "^0.1.2",
     "react-dom": "^18.2.0",
     "react-imported-component": "^6.5.3",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
@@ -64,7 +64,12 @@
   },
   "babel": {
     "presets": [
-      ["@babel/preset-env", { "modules": false }],
+      [
+        "@babel/preset-env",
+        {
+          "modules": false
+        }
+      ],
       "@babel/preset-react"
     ],
     "plugins": [
