--- a/my-react-extension/public/manifest.json
+++ b/my-react-extension/public/manifest.json
@@ -7,5 +7,9 @@
   "background": {
     "service_worker" : "background.js",
     "type": "module"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_title": "React Chrome Extension"
   }
 }
