--- a/my-react-extension/package.json
+++ b/my-react-extension/package.json
@@ -24,7 +24,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "env": {
+      "webextensions": true,
+      "browser": true
+    }
   },
   "browserslist": {
     "production": [
